tests/NormalTests/paczka1/fuzzy1/91452253.err
Error in line 1: BQQ2n S111 59,4
Error in line 7: S199 S452 19,6
Error in line 9: S199 S199 34,5
Error in line 12: jxdiTQ2 S452 69,5
Error in line 14: jxdiTQ2 S199 65,2
Error in line 13: YjieLwpZd S199 67,5
Error in line 19: fp31mAcyS S199 36,1
Error in line 22: YjieLwpZd S111 56,7
Error in line 25: fp31mAcyS S111 87,4
